frontend/k8s/service-tls.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-tls
  # namespace: dev
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:ap-southeast-1:520812544446:certificate/d51fac18-a84e-4a0e-8b7b-67273bf6cf72"
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
spec:
  externalTrafficPolicy: Local
  ports:
  - port: 443
    targetPort: 3000
    name: http
    protocol: TCP
  selector:
    app: frontend
  type: LoadBalancer
