frontend/k8s/ingress-fanout.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  name: app-ingress-multiple-path
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              number: 3000
      - path: /v3
        pathType: Prefix
        backend:
          service:
            name: app-service-v3
            port:
              number: 3000
